@@ -1,6 +1,8 @@
 package fr.samlegamer.mcwbyg.client;
 
-import java.util.List;
+import java.util.Arrays;
+import fr.addonslib.api.client.McwColors;
+import fr.samlegamer.addonslib.Finder;
 import fr.samlegamer.addonslib.Registration;
 import fr.samlegamer.addonslib.client.APIRenderTypes;
 import fr.samlegamer.addonslib.client.ColorRegistry;
@@ -12,14 +14,16 @@ import net.fabricmc.api.Environment;
 @Environment(EnvType.CLIENT)
 public class Client implements ClientModInitializer
 {
-	private static final List<String> LEAVES_NO_COLORED = List.of("maple", "flowering_yucca", "mahogany");
-	private static final ColorRegistry COLOR = new ColorRegistry(McwByg.MODID, LEAVES_NO_COLORED);
+	private static final ColorRegistry COLOR = new ColorRegistry(new McwColors(Arrays.asList(
+			Finder.makeIdHedge(McwByg.MODID, "flowering_yucca"),
+			Finder.makeIdHedge(McwByg.MODID, "mahogany"),
+			Finder.makeIdHedge(McwByg.MODID, "maple"))));
 
 	@Override
 	public void onInitializeClient()
 	{
-		COLOR.colorsBlock();
-		COLOR.colorsItem();
+		COLOR.registryBlockColorsAverage();
+		COLOR.registryItemColors();
 
         APIRenderTypes.initAllWood(McwByg.MODID, McwByg.WOOD, Registration.getAllModTypeWood());
         APIRenderTypes.initAllStone(McwByg.MODID, McwByg.STONE, Registration.getAllModTypeStone());
